--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "nuxt": "^3.11.2",
-    "sass": "^1.69.3",
     "axios": "^1.6.8",
+    "mitt": "^3.0.1",
     "node-sass": "^9.0.0",
+    "nuxt": "^3.11.2",
     "nuxt-svgo": "^4.0.0",
-    "vue-router": "^4.3.0",
+    "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
-    "postcss": "^8.4.38",
-    "vuetify": "^3.5.13",
     "@mdi/font": "^7.4.47",
-    "tailwindcss": "^3.4.3",
     "autoprefixer": "^10.4.19",
-    "vite-plugin-vuetify": "^2.0.3"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.5.13"
   }
 }
