--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "nuxt-svgo": "^4.0.0",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
+    "v-viewer": "^3.0.20",
+    "viewerjs": "^1.11.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-toastification": "^2.0.0-rc.5"
